horizontal scrollbars now have correct size

--- a/src/app.css
+++ b/src/app.css
@@ -6,6 +6,7 @@
 }
 
 ::-webkit-scrollbar {
+  height: 4px;
   width: 4px;
   filter: url(#noiseFilter);
 }
